Comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de HTML5 com CSS 3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor consequuntur quis dolorem illum architecto sequi, dicta eveniet aut beatae vitae. Mollitia laborum sit quisquam magni nemo facilis quod hic repellat.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid totam illo quidem fuga! Officiis, doloribus! Sed odit, laudantium nulla atque magni voluptatibus nemo, doloremque facilis architecto sint fuga omnis rerum.</p>
         </article>
     </main>
 </body>
